# ForecastAgent

./: .gitignore  Dockerfile  README.md  api_server.py  app.py  benchmark_pipeline.py  data_collector.py  data_simulator.py  dataset_builder.py  download_model.py  export_standalone.py  feature_summary.md  fine_tuning_plan.md  implementation_plan.md  implementation_plan_forecastagent_python_package  pyproject.toml  requirements.txt  test_short_train.py  train.py  walkthrough.md
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  index.css
docs/: api_serving.md  publishing_guide.md  sdk_usage.md
scripts/: create_github_repo.py
src/forecastagent/: __init__.py  agent.py  api.py  cli.py
src/forecastagent/modeling/: __init__.py  base.py  demo.py  plotting.py
src/forecastagent/modeling/api_adapter/: __init__.py  forecast.py  gluon.py  standard_adapter.py
src/forecastagent/modeling/model/: __init__.py  tirex2.py  types.py  xlstm_forecaster.py
src/forecastagent/modeling/model/component/: __init__.py  attention_block.py  bi_xlstm.py  flashrnn_slstm.py  layernorm.py  mlp.py  mlstm_block.py  patch_tokenizer.py  postprocessor.py  residual_block.py  scaler.py  variate_mixing_block.py  xlstm_mixed_config.py
tests/: test_agent.py
